Archive/2e71efea77aee5f048fa19eb6e61a5e7-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:3:1: error: expected ‘;’ after struct definition
 }
 ^
main.cpp: In function ‘int foo(Point)’:
main.cpp:5:19: warning: no return statement in function returning non-void [-Wreturn-type]
 int foo(Point p) {}
                   ^
